add feature report